syntax = "proto3";

option csharp_namespace = "ValidationServers.Passport";

package passport;

message ResultReply {
  bool result=1;
  string info=2;
}

message ValidationPassportRequest {
  string name = 1;
}
message ValidationPassportReply {
  string message = 1;
}

service ValidationPassport {
  rpc ValidatePassport(ValidationPassportRequest) returns(ValidationPassportReply);
}
